# clif

./: CMakeLists.txt  Doxyfile  README.md  TODO.md  clif.tex  config.h.in  windows.txt
cmake/: clifConfig.cmake.in  clifConfigVersion.cmake.in  projectConfig.cmake.in
cmake/modules/: CMakePackageConfigListHelpers.cmake  FlexDepLists.cmake
data/: types.ini
doc/: common.md  concepts.md  fileformat.md  library.md  tools.md
examples/: calib.ini  import_rgb.ini
src/clifview/: CMakeLists.txt  clifview.cpp  clifview.h  clifview.ui  main.cpp
src/gui/: CMakeLists.txt  clif_qt.cpp  clif_qt.hpp  clifepiview.cpp  clifepiview.hpp  clifqt.cpp  clifqt.hpp  clifscaledgraphicsview.cpp  clifscaledgraphicsview.hpp  clifscaledimageview.cpp  clifscaledimageview.hpp  clifstoreview.cpp  clifstoreview.hpp  clifviewcaller.cpp  clifviewcaller.hpp
src/gui/cmake/modules/: FindQwt.cmake
src/lib/: CMakeLists.txt  attribute.cpp  attribute.hpp  calib.cpp  calib.hpp  cam.cpp  cam.hpp  clif.cpp  clif.hpp  clif3dsubset.cpp  clif3dsubset.hpp  clif_cv.cpp  clif_cv.hpp  clif_vigra.cpp  clif_vigra.hpp  clifcalib.cpp  clifcalib.hpp  config.h.in  core.cpp  core.hpp  dataset.cpp  dataset.hpp  datastore.cpp  datastore.hpp  enumtypes.cpp  enumtypes.hpp  enumtypes.hpp.in  flexmav.hpp  hdf5.cpp  hdf5.hpp  helpers.cpp  helpers.hpp  mat.cpp  mat.hpp  mat_helpers.cpp  mat_helpers.hpp  matio.cpp  matio.hpp  mesh.cpp  mesh.hpp  (+9 more)
